2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_animation.geom
geometrics: main

/* Should fail -> LoopError: loop time value cannot be 1 */
animation a1 {
	tick is 20
	loop 1 times
} 